--- a/app/views/admin/static_pages/dashboard.html.erb
+++ b/app/views/admin/static_pages/dashboard.html.erb
@@ -1,8 +1,7 @@
-<h1>Test</h1>
+<% provide :title, "Supervisor Dashboard" %>
 <p>Managed Courses</p>
 <ul>
 	<% current_supervisor.courses.each do |course| %>
 	<li><%= course.name %></li>
 	<% end %>
 </ul>
-<%= link_to "Sign out", signout_path, method: "delete" %>
