--- a/app/views/enrollments/_activate.html.erb
+++ b/app/views/enrollments/_activate.html.erb
@@ -1,4 +1,7 @@
-<% unless @enrollment.blank? || @enrollment.activated? %>
-	<%= button_to "Start Course", activate_path(current_user.id, @enrollment.id,"activate"), 
-		method: :patch, class: "btn btn-large btn-primary" %>
+<% if @enrollment %>
+  <% unless @enrollment.activated? %>
+  	<%= link_to "Start Course", 
+  		user_enrollment_path(current_user.id, @enrollment.id), 
+  		method: :patch, class: "btn btn-large btn-primary" %>
+	<% end %>  		
 <% end %>
