--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,9 +4,9 @@
       <%= link_to image_tag("logo.png", alt: "Member Management System on Rails", class:"logo-img"), root_path %>
       <%= link_to "Training Management System", root_path, id: "logo" %>
       <nav>
-        <ul class="nav pull-right">
-          <li><%= link_to "Home", root_path %></li>
+        <ul class="nav pull-right">          
           <% if signed_in? %>
+          <li><%= link_to "Home", root_path %></li>
           <li id="" class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Welcome, <i> <%= current_user.name %> </i> <b class="caret"></b>
@@ -20,6 +20,7 @@
             </ul>
           </li>
           <% elsif supervisor_signed_in? %>
+          <li><%= link_to "Home", admin_root_path %></li>
           <li id="" class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Welcome, <i> <%= current_supervisor.name %> </i> <b class="caret"></b>
@@ -33,7 +34,18 @@
             </ul>
           </li>
           <% else %>
-          <li><%= link_to "Sign in", signin_path %></li>
+          <li><%= link_to "Home", root_path %></li>
+          <li id="" class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Sign in <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "As Trainee", signin_path %></li>
+              <li>
+                <%= link_to "As Supervisor", admin_signin_path %>
+              </li>
+            </ul>
+          </li>
           <% end %>
         </ul>
       </nav>
