--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -9,7 +9,7 @@
   <li>
     <%= gravatar_for user %>
     <div class="user-info">
-      <%= link_to user.name, "#" %><br/>
+      <%= link_to user.name, admin_user_path(user.id) %><br/>
       <%= link_to user.current_course.name, "#" %><br/>
       Status:<%= user.enrollments.by_course(user.current_course_id).first.status %><br/>
       Subjects:<%= user.enrollments.by_course(user.current_course_id).first.enrollment_subjects.subject_done.count %>/<%= user.current_course.subjects.count %><br/>
