--- a/app/views/admin/courses/show.html.erb
+++ b/app/views/admin/courses/show.html.erb
@@ -1,9 +1,7 @@
 <% provide(:title, "All users") %>
 <h1><%= @course.name %></h1>
 <h2> All Supervisor in Course </h2>
-<%= link_to "Start Course", admin_supervisor_course_path(current_supervisor.id, 
-  @course.id), method: :patch, class: "btn btn-large btn-primary" %>
-<ul>
+<%= render "start_course" %>
 	<% @course.course_subjects.each do |course_subject| %>
     <li>
       <%= course_subject.subject.name %>: <%= l(course_subject.start_date) %> - 
