--- a/app/views/admin/courses/show.html.erb
+++ b/app/views/admin/courses/show.html.erb
@@ -1,15 +1,20 @@
-<% provide(:title, "All users") %>
+<% provide :title, "All users" %>
 <h1><%= @course.name %></h1>
-<h2> All Supervisor in Course </h2>
 <%= render "start_course" %>
+<h2>start_date: <%= "#{l(@course.start_date)} - #{l(@course.end_date)}" %>
+  <%= @course.status %></h2> 
+<h2> All Subject in Course </h2>
+<ul>
 	<% @course.course_subjects.each do |course_subject| %>
     <li>
-      <%= course_subject.subject.name %>: <%= l(course_subject.start_date) %> - 
-      <%= l(course_subject.end_date) %>
+      <%= course_subject.subject.name %>: <%= "#{l(course_subject.start_date)} - 
+      #{l(course_subject.end_date)}" %>
+      <%= @enrollment_subject.status %>
       <% course_subject.course_subject_tasks.each do |course_subject_task| %>
       <ul>
       	<li>
       		<%= course_subject_task.task.name %>
+          <%= @enrollment_task.status %>
       	</li>
       </ul>
       <% end %>
@@ -21,16 +26,16 @@
   <% @course.supervisors.each do |supervisor| %>
     <li>
       <%= gravatar_for supervisor %>
-      <%= supervisor.name %>
+      <%= link_to supervisor.name, admin_supervisor_path(supervisor) %>
     </li>
   <% end %>
 </ul>
 <h2> All Users in Course </h2>
 <ul class="users">
-		<% @course.users.each do |user| %>
+	<% @course.users.each do |user| %>
     <li>
       <%= gravatar_for user %>
-      <%= user.name %>
+      <%= link_to user.name, admin_user_path(user) %>
     </li>
   <% end %>
 </ul>
