--- a/app/views/admin/courses/index.html.erb
+++ b/app/views/admin/courses/index.html.erb
@@ -1,26 +1,38 @@
 <% provide :title, "All courses" %>
-<h1>All Course </h1>
-<%= link_to "New", "#" %>
-<table>
-	<tr>
-		<th> Course </th>
-		<th> Started on </th>
-		<th> Duration (days) </th>
-		<th> Subject </th>
-		<th> Trainee </th>
-		<th> Status </th>
-		<th> Action </th>
-	</tr>
-	<% @courses.each do |course| %>
+
+<h1>
+	<%= yield :title %>
+	<small>( <%= @courses.count %> )</small>
+	<%= link_to "Add new", "#", class: "btn btn-primary small" %>
+</h1>
+
+<div class="center">
+	<table>
 		<tr>
-			<td><%= course.name %></td>
-			<td><%= course.start_date %></td>
-			<td><%= course.course_duration %></td>
-			<td><%= course.subjects.count %></td>
-			<td><%= course.users.count %></td>
-			<td><%= course.status %></td>
-			<td><%= link_to "edit", "#" %>|<%= link_to "delete", course, method: :delete, data: {confirm: "Are you sure?"}, title: course.name %></td>
+			<th> # </th>
+			<th> Course </th>
+			<th> Started on </th>
+			<th> Duration </th>
+			<th> Subjects </th>
+			<th> Trainees </th>
+			<th> Status </th>
+			<th> Action </th>
 		</tr>
-	<% end %>
-</table>
-<%= will_paginate @activities %>
+		<% @courses.each_with_index do |course, i| %>
+			<tr>
+				<td><%= item_index i %></td>
+				<td><%= link_to course.name, course %></td>
+				<td><%= l course.start_date %></td>
+				<td><%= pluralize course.course_duration, "day" %></td>
+				<td><%= course.subjects.count %></td>
+				<td><%= course.users.count %></td>
+				<td><%= course.status %></td>
+				<td><%= link_to "edit", "#", class: "btn btn-primary small" %>
+						<%= link_to "delete", course, method: :delete,
+							confirm: "Are you sure?", class: "btn btn-danger small" %>
+				</td>
+			</tr>
+		<% end %>
+	</table>
+	<%= will_paginate %>
+</div>
