--- a/app/views/enrollments/show.html.erb
+++ b/app/views/enrollments/show.html.erb
@@ -3,11 +3,10 @@
 <ul class="milestones">
   <% @enrollment_subjects.each do |enrollment_subject| %>
     <li class="<%= enrollment_subject.status %>" 
-      title="Duration: <%= pluralize(enrollment_subject.subject.duration, "day") %>">
+      title="Duration: <%= pluralize enrollment_subject.subject.duration, "day" %>">
       <div class="milestone-name">
-      <%= link_to enrollment_subject.subject.name, 
-        user_enrollment_enrollment_subject_path @current_user, 
-        @enrollment, enrollment_subject %>
+      <%= link_to enrollment_subject.subject.name,
+        user_enrollment_enrollment_subject_path(current_user, @enrollment, enrollment_subject) %>
       </div>
       <div class="milestone-status">
       <%= link_to "✓", user_enrollment_enrollment_subject_path(@current_user,
