--- a/app/views/layouts/_nameplate.html.erb
+++ b/app/views/layouts/_nameplate.html.erb
@@ -1,8 +1,8 @@
-<div class="user-info-wrap dashboard">
+<div class="user-info-wrap">
   <%= image_tag "default_user.png", alt: @current_supervisor.name, class: "user-avatar" %>
   <div class="user-info">
     <div class="user-name">
-      <h2><%= @current_supervisor.name %></h2>
+      <h1><%= @current_supervisor.name %></h1>
     </div>
     <div class="user-desc"> <%= @current_supervisor.email %> </div>
   </div>
