--- a/app/views/admin/courses/index.html.erb
+++ b/app/views/admin/courses/index.html.erb
@@ -21,7 +21,7 @@
 		<% @courses.each_with_index do |course, i| %>
 			<tr>
 				<td><%= item_index i %></td>
-				<td><%= link_to course.name, course %></td>
+				<td><%= link_to course.name, admin_supervisor_course_path(current_supervisor, course) %></td>
 				<td><%= l course.start_date %></td>
 				<td><%= pluralize course.course_duration, "day" %></td>
 				<td><%= course.subjects.count %></td>
