--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,17 +37,7 @@
           </li>
           <% else %>
           <li><%= link_to "Home", root_path %></li>
-          <li id="" class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Sign in <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "As Trainee", signin_path %></li>
-              <li>
-                <%= link_to "As Supervisor", admin_signin_path %>
-              </li>
-            </ul>
-          </li>
+          <li><%= link_to "Sign in", signin_path %></li>
           <% end %>
         </ul>
       </nav>
