--- a/app/views/shared/_show_user.html.erb
+++ b/app/views/shared/_show_user.html.erb
@@ -1,8 +1,8 @@
-<ul class="users-aside">
+<ul class="user-sidebar">
   <% @course.users.each do |user| %>
     <li>
       <%= gravatar_for user, size: 30 %>
-      <%= link_to user.name, user %>
+      <%= link_to user.name, user, class: "user-name" %>
     </li>
   <% end %>
 </ul>
