--- a/app/views/admin/courses/show.html.erb
+++ b/app/views/admin/courses/show.html.erb
@@ -7,9 +7,7 @@
 <ul>
 	<% @course.course_subjects.each do |course_subject| %>
     <li>
-      <%= course_subject.subject.name %>: <%= "#{l(course_subject.start_date)} - 
-      #{l(course_subject.finish_date)}" %>
-      <!--%= course_subject.status %!-->
+      <%= course_subject.subject.name %>: <%= "#{l(course_subject.start_date)} - #{l(course_subject.finish_date)}" %>
       <% course_subject.course_subject_tasks.each do |course_subject_task| %>
       <ul>
       	<li>
