--- a/app/views/admin/courses/show.html.erb
+++ b/app/views/admin/courses/show.html.erb
@@ -48,3 +48,7 @@
     <%= render "shared/show_user_sidebar", users: @course.users, type: "user" %>
   </div>
 </div>
+  <div>
+    <%= render "admin/shared/assign_trainees" %>
+  </div>
+</div>
