--- a/app/views/admin/courses/_start_course.html.erb
+++ b/app/views/admin/courses/_start_course.html.erb
@@ -1,4 +1,7 @@
-<%= link_to "Start Course", 
-	admin_supervisor_course_path(current_supervisor.id, @course.id), 
-	method: :patch,
-	class: "btn btn-large btn-primary" unless @course.activated? %>
+<% if @course.inactivated? %>
+	<%= link_to "Start Course", 
+		admin_supervisor_course_path(current_supervisor.id, @course.id), 
+		method: :patch, confirm: "Start this course?", class: "btn btn-large btn-primary" %>
+<% elsif @course.unfinished? %>
+	<%= link_to "Finish Course", '#', class: "btn btn-large btn-primary" %>
+<% end %>
