--- a/app/views/shared/_show_user.html.erb
+++ b/app/views/shared/_show_user.html.erb
@@ -1,7 +1,7 @@
 <ul class="user-sidebar">
   <% @course.users.each do |user| %>
     <li>
-      <%= gravatar_for user, size: 30 %>
+      <%= gravatar_for user %>
       <%= link_to user.name, user, class: "user-name" %>
     </li>
   <% end %>
