course finish date

--- a/app/views/admin/courses/show.html.erb
+++ b/app/views/admin/courses/show.html.erb
@@ -18,7 +18,7 @@
   <tr>
     <td class="subject-info">
       <h4><%= link_to course_subject.subject.name, "#" %></h4>
-      <p><%= "#{l(course_subject.start_date)} - #{l(course_subject.end_date)}" %></p>
+      <p><%= "#{l(course_subject.start_date)} - #{l(course_subject.finish_date)}" %></p>
     </td>
     <td>
       <ul class="tasks-sup">
