--- a/app/views/admin/courses/show.html.erb
+++ b/app/views/admin/courses/show.html.erb
@@ -17,7 +17,7 @@
   <% @course.course_subjects.each do |course_subject| %>
   <tr>
     <td class="subject-info">
-      <h4><%= link_to course_subject.subject.name, "#" %></h4>
+      <h4><%= course_subject.subject.name %></h4>
       <p>
         <%= "#{l(course_subject.start_date)} - #{l(course_subject.finish_date)}" %>
         <%= course_subject.status %>
