--- a/app/views/admin/courses/show.html.erb
+++ b/app/views/admin/courses/show.html.erb
@@ -51,8 +51,7 @@
       <%= link_to "Edit", "#assign_trainee_modal", class: "btn btn-large btn-primary",
         data: {toggle: "modal"} %>
     </div>
-    <%= render "shared/show_user_sidebar", users: @course.users.choose_user_in_course(@course.id), 
-      type: "user" %>
+    <%= render "shared/show_user_sidebar", users: @course.users.choose_user_in_course(@course.id), type: "user" %>
   </div>
 </div>
 <% if current_supervisor.in?(@course.supervisors) %>
