--- a/app/views/admin/shared/_assign_trainees.html.erb
+++ b/app/views/admin/shared/_assign_trainees.html.erb
@@ -5,7 +5,7 @@
     <h3 id="assign_trainee_modal_label">Assign trainee to: <%= @course.name %></h3>
   </div>
   <div class="modal-body">
-    <%= form_tag(admin_supervisor_course_user_list_path(@supervisor_course, @course), id: "user_list_form", method: :patch) %>
+    <%= form_tag(admin_supervisor_course_user_list_path(current_supervisor, @course), id: "user_list_form", method: :patch) %>
       <div class="row center">
         <div class="center-child">
           <div class="span3">
