--- a/app/views/admin/courses/show.html.erb
+++ b/app/views/admin/courses/show.html.erb
@@ -19,7 +19,16 @@
     <td class="subject-info">
       <h4><%= course_subject.subject.name %></h4>
       <p>
-        <%= "#{l(course_subject.start_date)} - #{l(course_subject.finish_date)}" %>
+        <% if course_subject.start_date.present? %>
+          <%= "#{l course_subject.start_date} - " %>
+          <% if course_subject.duration.present? %>
+            <%= l course_subject.finish_date %>
+          <% else %>
+            End date not given
+          <% end %>
+        <% else %>
+          Start date not given
+        <% end %>
         <%= course_subject.status %>
         <%= link_to "Finish", admin_supervisor_course_course_subject_path(current_supervisor.id, 
           @course.id, course_subject.id), method: :patch, class: "btn btn-large btn-primary" unless course_subject.done? %>
